--- a/src/style/index.css
+++ b/src/style/index.css
@@ -19,6 +19,27 @@ html, body {
   src: url(https://fonts.gstatic.com/s/materialicons/v29/2fcrYFNaTjcS6g4U3t-Y5UEw0lE80llgEseQY3FEmqw.woff2) format('woff2');
 }
 
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/assets/fonts/gilroy-bold.otf') format("opentype");
+  font-weight: 700;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/assets/fonts/gilroy-extrabold.otf') format("opentype");
+  font-weight: 900;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/assets/fonts/gilroy-light.otf') format("opentype");
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/assets/fonts/gilroy-regular.otf') format("opentype");
+  font-weight: 400;
+}
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
